--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.5.0",
     "react-hot-loader": "4",
     "react-router-dom": "^4.3.1",
+    "react-stripe-elements": "^2.0.1",
     "react_ujs": "^2.4.4"
   },
   "devDependencies": {
