--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
+    "eslint": "^5.6.0",
+    "eslint-plugin-react": "^7.11.1",
     "jest": "^23.6.0",
     "webpack-dev-server": "2.11.2"
   },
