--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
+    "react-autosuggest": "^9.4.2",
     "react-dom": "^16.5.0",
     "react-hot-loader": "4",
     "react-router-dom": "^4.3.1",
